Prevent querying database to determine if metadata exists